tdaa suuliin uuurchlultuud

--- a/Entity/.settings/org.eclipse.core.resources.prefs
+++ b/Entity/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/garden/businessentity/Tool.java=UTF-8
+encoding//src/garden/entity/Food.java=UTF-8
 encoding//src/garden/entity/Orts.java=UTF-8
