--- a/Web/.settings/org.eclipse.core.resources.prefs
+++ b/Web/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,4 @@ encoding//WebContent/template/common/topbar.xhtml=UTF-8
 encoding//src/hospital/web/controller/ApplicationController.java=UTF-8
 encoding//src/hospital/web/controller/InfoController.java=UTF-8
 encoding//src/hospital/web/controller/UserSessionController.java=UTF-8
+encoding/<project>=UTF-8
