--- a/BusinessLogic/.settings/org.eclipse.core.resources.prefs
+++ b/BusinessLogic/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//ejbModule/hospital/businesslogic/InfoLogic.java=UTF-8
+encoding//ejbModule/hospital/businesslogic/PlanLogic.java=UTF-8
 encoding//ejbModule/hospital/businesslogic/UserLogic.java=UTF-8
